修复了知识库隐私